tests/errors/intrinsics16.f90
program test_compiler_options
    implicit none
    print *, compiler_options()
end program